Fixing overflow

--- a/style.css
+++ b/style.css
@@ -257,9 +257,19 @@ code {
     font-weight: 400;
     color: rgba(255, 255, 255, 0.5);
 }
+.projeto{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    width: 100%;
+    max-height: 100%;
+}
 .stacks {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     width: 100%;
     height: 30px;
@@ -267,10 +277,10 @@ code {
 }
 .stacks div{
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 106px;
+    min-width: 106px;
+    max-width: 106px;
     height: 30px;
     margin-bottom: 10px;
     background-color: rgba(123, 74, 226, 0.1);
@@ -281,6 +291,9 @@ code {
     color: rgba(123, 74, 226, 1.0);
     font-size: 16px;
     font-weight: 700;
+    text-overflow: ellipsis;  
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .skills{
